custom-resource-consumers/takeout/apps/home-automation/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
  namespace: home-automation
  external-dns.alpha.kubernetes.io/hostname: ${personal_domain_ddns}
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.69
  selector:
    app: frigate
  ports:
    - name: http-frigate
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: rtmp-frigate
      protocol: TCP
      port: 1935
      targetPort: 1935
